# webmobilepoc

./: .gitattributes  .gitignore  Taskfile.yml
client/: AGENTS.md  Taskfile.yml  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/android/app/: build.gradle
client/ios/: debug.xcconfig
client/scripts/: configure-ios-dev-server.mjs  local-ip.mjs
client/src/: main.ts  style.css
client/src/app/: App.ts  AppView.ts  AppView.tsx  LiveBubbleStore.ts  ViewportLayoutController.ts  appConfig.ts  appState.ts  renderPlayers.ts  spacetimedb.ts
client/src/game/: WorldGridRenderer.ts  WorldPlayerRenderer.ts  WorldScene.ts  worldLayout.ts  worldTypes.ts
client/src/module_bindings/: index.ts  (+8 more)
server/: .gitignore  .rustfmt.toml  Cargo.toml  Taskfile.yml
server/bins/webmobiledb/: Cargo.toml
server/bins/webmobiledb/src/: lib.rs
server/sdks/core/: AGENTS.md  Cargo.toml
server/sdks/core/src/: constants.rs  error.rs  lib.rs
server/sdks/core/src/extend/: duration.rs  iter.rs  mod.rs  proximity.rs  stdb.rs  validate.rs
server/sdks/core/src/repository/: character.rs  chat.rs  event.rs  mod.rs  user.rs  world.rs
server/sdks/core/src/repository/character/: reducers.rs  services.rs  types.rs  views.rs
server/sdks/core/src/repository/chat/: reducers.rs  services.rs  views.rs
server/sdks/core/src/repository/event/: services.rs  types.rs
server/sdks/core/src/repository/user/: services.rs  views.rs
server/sdks/core/src/repository/world/: reducers.rs  services.rs  types.rs  views.rs
tools/: spacetime_login.sh
(+14 files in other folders)
