[workspace]
members = ["bins/*", "sdks/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]
webmobiledb-core = { path = "sdks/core" }

log = { version = "0.4.29" }
spacetimedb = { version = "2.0.4" }
thiserror = { version = "2.0.18" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
