[package]
name = "webmobiledb"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
webmobiledb-core = { workspace = true }

log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
spacetimedb = { workspace = true }
